# germination-tracker

./: README.md  README_PTBR.md  gif.py  main.py  pyproject.toml
germination_tracker/: video_capture_administrator.py
germination_tracker/exceptions/: frame_loader_exception.py
tests/: create_frame_test.py  init_frame_test.py  save_picture_test.py  take_picture_test.py
