[tool.poetry]
name = "germination-tracker"
version = "0.1.0"
description = ""
authors = ["Fernnando Sussmann <fernnandosussmann@gmail.com>"]
readme = "README.md"
packages = [{include = "germination_tracker"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
